--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,16 +5,28 @@
   title={Atomic-to-Compositional Generalization for Mobile Agents with A New Benchmark and Scheduling System},
   author={Guo, Yuan and Miao, Tingjia and Wu, Zheng and Cheng, Pengzhou and Zhou, Ming and Zhang, Zhuosheng},
   journal={arXiv preprint arXiv:2506.08972},
-  year={2025}
+  year={2025},
+  preview={agent_nexus.png},
+  website={https://ui-nexus.github.io},
+  arxiv={2506.08972}
 }
 
 @article{lu2025eva,
   title={EVA: Red-Teaming GUI Agents via Evolving Indirect Prompt Injection},
   author={Lu, Yijie and Ju, Tianjie and Zhao, Manman and Ma, Xinbei and Guo, Yuan and Zhang, ZhuoSheng},
   journal={arXiv preprint arXiv:2505.14289},
-  year={2025}
+  year={2025},
+  preview={eva.png},
+  arxiv={2505.14289}
 }
 
+@article{wu2025universal,
+  title={Universal Confidence Integration Framework for Adaptive Interaction in Computer-Using Agent},
+  author={Wu, Zheng and Cheng, Pengzhou and Wu, Zongru and Guo, Yuan and Ju, Tianjie and Zhang, Aston and Liu, Gongshen and Zhang, Zhuosheng},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence (under review)},
+  year={2025},
+  note={Under review}
+}
 
 @inproceedings{gu2023plan,
   title={Plan, generate and match: Scientific workflow recommendation with large language models},
@@ -22,5 +34,6 @@
   booktitle={International Conference on Service-Oriented Computing},
   pages={86--102},
   year={2023},
-  organization={Springer}
+  organization={Springer},
+  preview={PGR.png}
 }
