--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -25,7 +25,8 @@
   author={Wu, Zheng and Cheng, Pengzhou and Wu, Zongru and Guo, Yuan and Ju, Tianjie and Zhang, Aston and Liu, Gongshen and Zhang, Zhuosheng},
   journal={IEEE Transactions on Pattern Analysis and Machine Intelligence (under review)},
   year={2025},
-  note={Under review}
+  note={Under review},
+  preview={kairos.png}
 }
 
 @inproceedings{gu2023plan,
